# finance_wise

./: .env  .env.example  .gitignore  .gitmodules  CYBERSECURITY_CONCEPT.md  Cargo.toml  DATABASE_SECURITY.md  README.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SECURITY_IMPLEMENTATION_GUIDE.md  db_keyfile
docs/: ARCHITECTURE.md  CONCEPTS.md  DEVELOPMENT_GUIDE.md  PROJECT_STRUCTURE.md
frontend/: package-lock.json  package.json  postcss.config.js
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: DesktopSettings.tsx  Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useTauri.ts
frontend/src/pages/: Accounts.tsx  Analytics.tsx  Dashboard.tsx  Login.tsx  NotFound.tsx  Settings.tsx  Transactions.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
migrations/2025-04-27-105017_create_initial_schema/: down.sql  up.sql
migrations/2025-07-28-063205_fix_schema/: down.sql  up.sql
scripts/: delete_database.sh  setup_database.sh  setup_secure_db.sh  setup_security.sh
src/: config.rs  data_manager.rs  finance.rs  main.rs  schema.rs  transaction_data.rs
src/cli/: commands.rs
src/models/: account.rs  mod.rs  party.rs  receipt.rs  transaction.rs
src/services/: account_service.rs  mod.rs  party_service.rs  receipt_service.rs  transaction_service.rs
src/utils/: db.rs
