[package]
name = "finwise-desktop"
version = "0.1.0"
description = "FinWise Desktop - Secure Personal Finance Management"
authors = ["FinWise Team"]
license = "MIT"
repository = "https://github.com/junoput/finance_wise"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
dirs = "5.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
